fix: bubble means overflow

--- a/public/css/content_script.css
+++ b/public/css/content_script.css
@@ -126,6 +126,7 @@
   color: #000;
   > div {
     line-height: 28px;
+    margin-right: 16px;
     > span {
       display: inline-block;
       width: 56px;
